syntax="proto3";

package schema.base.v1beta1;

import "third_party/proto/gogoproto/gogo.proto";
//import "proto/comos/base/v1beta1/coin.proto";
// import "github.com/cosmos/cosmos-sdk/third_party/proto/gogoproto/gogo.proto";

option go_package = "schema/test_types";

message ID {
  option (gogoproto.goproto_getters) = false;
      option (gogoproto.goproto_stringer) = false;
  option (gogoproto.equal)            = false;

  string id_string =1;



}