syntax="proto3";

package schema.base.v1beta1;

import "third_party/proto/gogoproto/gogo.proto";
import "proto/schema/base/v1beta1/id.proto";
import "proto/schema/base/v1beta1/height.proto";

option go_package="schema/test_types/base";

message signature {
    option (gogoproto.goproto_getters) = false;
    option (gogoproto.equal)            = false;    

    schema.base.v1beta1.ID ID =1 [(gogoproto.nullable) = false];
    bytes signature_bytes =2;
    schema.base.v1beta1.height validity_height =3 [(gogoproto.nullable) = false];

}